# KafkaLogger

./: CMakeLists.txt  COPYING  README  configure.plugin
scripts/: __load__.bro  init.bro
scripts/Kafka/KafkaWriter/: __load__.bro  logs-to-kafka.bro
src/: AddingJson.cc  AddingJson.h  Kafka.cc  Kafka.h  Plugin.cc  Plugin.h  RoundRobinPartitioner.cc  RoundRobinPartitioner.h  kafkawriter.bif
tests/: btest.cfg
tests/kafkawriter/: show-plugin.bro
